# bucket_dl

./: .gitignore  Cargo.toml  README.md  todo.md  todo.txt
.github/workflows/: cargo_test.yml
examples/: indicatif_bars.rs
src/: bucket.rs  delay.rs  download_client.rs  lib.rs  main.rs  models.rs
