[package]
name = "bucket_dl"
version = "0.1.1"
edition = "2024"
categories = ["web-programming::http-client", "filesystem", "asynchronous"]
keywords = ["download", "download+manager", "multithreaded"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pybounce/bucket_dl"
publish = true
description = "A multithreaded downloader with the purpose of faster downloads by splitting it into several requests, rebuilding the data client-side."

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.4"
indicatif = "0.17.11"
